--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   },
   "devDependencies": {
     "gitbook-cli": "^2.3.2"
+  },
+  "dependencies": {
+    "gitbook-plugin-github": "^2.0.0",
+    "gitbook-plugin-prism": "^2.4.0",
+    "gitbook-plugin-scroll-into-active-chapter": "^1.0.1"
   }
 }
